[package]
name = "netsim"
version = "0.2.5"
authors = ["Andrew Cann <shum@canndrew.org>"]
description = "Network simulator"
repository = "https://github.com/canndrew/netsim"
license = "MIT OR BSD-3-Clause"
keywords = ["network", "ip", "testing"]
categories = ["development-tools::testing", "network-programming", "simulation"]
readme = "README.md"
edition = "2018"

[dependencies]
async-std = "=1.5.0"
async-timer = "1.0.0-beta.3"
byteorder = "1.3.4"
bytes = "0.5.4"
capabilities = "0.3.0"
futures = "0.3.5"
get_if_addrs = "0.5.3"
ioctl-sys = "0.5.2"
libc = "0.2.71"
log = "0.4.8"
net-literals = "0.1.2"
rand = "0.7.3"
smol = "0.1.11"
statrs = "0.12.0"
thiserror = "1.0.19"
unwrap = "1.2.1"

[dev-dependencies]
bincode = "1.2.1"
env_logger = "0.7.1"

[features]
linux_host = []
default = ["linux_host"]
